--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ a {
 
 p {
   font-family: sans-serif;
-  font-size: 1.8rem;
-  font-weight: 300;
+  font-size: 2rem;
+  font-weight: 400;
 }
 
 img {
@@ -67,7 +67,7 @@ img {
   bottom: -.5rem;
   left: 50%;
   transform: translateX(-50%);
-  background-color: rgba(255, 255, 255, .75);
+  background-color: #7c7c7c;
 }
 
 .section-heading h1::before {
@@ -243,7 +243,7 @@ li {
 .about-heading h1 {
   font-size: 10rem;
   opacity: .3;
-  margin-bottom: 6rem;
+  margin-bottom: 8rem;
 }
 
 
@@ -262,6 +262,7 @@ li {
 
 .social-media i {
   font-size: 5rem;
+  color: #5b507a;
   transition: color 650ms;
 }
 
@@ -346,6 +347,7 @@ li {
 .portfolio-description h1 {
   font-size: 2.5rem;
   opacity: .3;
+  margin-bottom: 1rem;
 }
 
 .portfolio-description p a {
@@ -415,10 +417,6 @@ li {
 
 /* Contact Form */
 
-.contact {
-  background-color: black;
-}
-
 form {
   width: 70%;
   margin: 0 auto;
@@ -432,7 +430,8 @@ input,
 textarea {
   width: 100%;
   padding: 1rem;
-  margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 10px;
   border: none;
   outline-color: #9984d4;
 }
@@ -555,7 +554,7 @@ input[type="submit"]:hover {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .menu-toggler {
     top: 2rem;
     right: 2rem;
@@ -591,13 +590,13 @@ input[type="submit"]:hover {
     order: 2;
   }
 
-  .timeline p {
+  /* .timeline p {
     font-size: 1.7rem;
   }
 
   .timeline .date:before {
     font-size: 1.5rem;
-  }
+  } */
 
   form {
     width: 100%;
